-------------------- 1.1.5 [2008-07-27] ---------------------
2008-07-27	Ali Farhadi <ali@farhadi.ir>
	* calendar-setup.js: new feature added to show popup calendars when their input field gets focus

-------------------- 1.1 (Stable Release) [2008-07-11] ---------------------
2008-07-11	Ali Farhadi <ali@farhadi.ir>
	* calendar.js: Implementation of getJalaliUTCWeekNumber method corrected.
	
	* calendar.js: Bug fixed in getJalaliUTCDayOfYear method.
	
	* calendar.js: getLocalDay method added and used instead of getDay where needed.
	
	* calendar.js: Some bugs fixed in print and _init methods.

	* calendar.js: Some other minor bugs fixed.

	* jalali.js: getJalaliDay and getJalaliUTCDay methods added.
	
2008-06-12  Ali Farhadi <ali@farhadi.ir>
	* calendar.js: parseDate bug fixed (now handles miliseconds correctly).
	
-------------------- 1.1 beta [2008-06-07] ---------------------
2008-06-07  Ali Farhadi <ali@farhadi.ir>
	* calendar.js: some methods added to handle the calendar more dynamically.

	* calendar.js: direction of calendar can be defined in language files.
	
	* calendar.js: fixed bug in keyboard navigation with right to left languages.
	
	* calendar.js: fixed bug in parseDate function with hours greater that 19.

	* calendar-setup.js: now setup function returns the calendar object.

	* calendar-setup.js: cache parameter removed.

-------------------- 1.0 beta [2008-06-03] ---------------------
2008-06-03  Ali Farhadi <ali@farhadi.ir>
	JalaliJSCalendar project started based on code from Mihai Bazon (http://dynarch.com/mishoo/)
	Folders are restructured.
	Examples are rewritten.
	
	* calendar.php: removed.

	* calendar.js: Totally rewritten with UTC functions.
	since using local functions when DST is active will produce some bugs, I replaced the functions with UTC alternatives.

	* calendar.js: "am" and "pm" Strings moved to language files.

	* calendar.js: parseDate method is rewritten because it was very buggy.
